@@ -6,6 +6,7 @@ core:
 
 === Edge
 
+* Michael Kessler
 * Sean Cribbs
 * David Cato
 * Kunal Shah
